add search-related routes functionality
